# PicoSwitch-WirelessGamepadAdapter

./: .clang-files  .clang-format  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh
bluepad32/: CMakeLists.txt  uni_balance_board.c  uni_ble.c  uni_bt.c  uni_bt_allowlist.c  uni_bt_bredr.c  uni_bt_conn.c  uni_bt_le.c  uni_bt_sdp.c  uni_bt_setup.c  uni_console.c  uni_gamepad.c  uni_hid_device.c  uni_hid_parser_ds5.c  uni_hid_parser_psmove.c  uni_hid_parser_steam.c  uni_hid_parser_xboxone.c  uni_joystick.c  uni_log.c  uni_main.c  uni_platform.c  uni_platform_arduino.c  uni_platform_mightymiggy.c  uni_platform_nina.c  uni_platform_pico.c  uni_platform_unijoysticle.c  uni_property.c  uni_virtual_device.c
bluepad32/include/: btstack_config.h  hid_usage.h  sdkconfig.h  uni_balance_board.h  uni_bt.h  uni_bt_allowlist.h  uni_bt_bredr.h  uni_bt_conn.h  uni_bt_defines.h  uni_bt_sdp.h  uni_bt_setup.h  uni_common.h  uni_config.h  uni_error.h  uni_gamepad.h  uni_hid_device.h  uni_hid_device_vendors.h  uni_hid_parser_ds5.h  uni_hid_parser_psmove.h  uni_hid_parser_steam.h  uni_hid_parser_xboxone.h  uni_joystick.h  uni_main.h  uni_platform.h  uni_platform_pico.h  uni_property.h  uni_version.h  uni_virtual_device.h
include/: BluepadController.h  Bluepad_main.h  Controller.h  OtherController.h  PicoConsole.h  PicoController.h  SwitchDescriptors.h  btstack_config.h  report.h  sdkconfig.h  tusb_config.h  tusb_handler.h  usb.h
src/: Bluepad32.h  Bluepad32_PicoW.cpp  CMakeLists.txt  PicoBluepad32.cpp  PicoBluepad32.h  PicoConsole.cpp  PicoControllerData.h  PicoControllerProperties.h  PicoGamepad.h  PicoGamepadProperties.h  bluepad_main.cpp  btstack_config.h  main.c  main.cpp  my_platform.c  pico_switch.c  pico_switch_platform.c  report.c  tusb_handler.cpp  tusb_handler.h  usb.c  usb_descriptors.c
src/otherController/: CMakeLists.txt  Controller.pio  otherController.cpp
src/otherController/bluepad/: BluepadController.cpp  CMakeLists.txt
src/picoHandler/: PicoBluepad32.cpp  PicoController.cpp
src/switchController/: CMakeLists.txt  SwitchDescriptors.cpp
